--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=favorite" />
 
-
 <body>
     <!-- Circle Div -->
     <!-- <div id="circle-div" class="border-2 border-amber-700 absolute top-0 left-0 z-[-1]"> -->
@@ -21,13 +20,13 @@
         <header>
             <!-- Logo & Heading container-->
             <section id="logo-div"
-                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 md:flex-row md:gap-0 lg:border-2 lg:border-b-black lg:gap-0">
+                class="flex flex-col justify-center items-center gap-6 w-[95%] mx-auto my-0 md:flex-row md:gap-0 lg:gap-0">
                 <div id="mymusic-logo" class="w-[90%] md:w-[50%]">
                     <img src="./src/images/logo.png" class="rounded-4xl p-4" alt="">
                 </div>
-                <div class="p-5">
+                <div class="p-5 my-5">
                     <span
-                        class="bg-[#101E26] text-[#ECDFCC] text-md px-6 py-8 rounded-2xl md:text-md md:font-semibold md:py-12 md:px-8 lg:text-3xl lg:px-8 lg:py-18">Your
+                        class="bg-[#101E26] font-mono text-[#ECDFCC] text-md px-6 py-8 rounded-2xl md:text-md md:font-semibold md:py-12 md:px-8 lg:text-2xl lg:px-5 lg:py-18">Your
                         Music place, play it your
                         way</span>
                 </div>
@@ -38,8 +37,8 @@
                 <section class="my-3 mx-auto w-[90%] ">
                     <!-- Search icon -->
                     <div class="bg-[#001F3F] rounded-2xl md:p-2.5 flex items-center gap-5 px-2">
-                        <input type="text" id="text" class="w-full p-3 rounded-2xl text-amber-50 md:text-lg"
-                            placeholder="Search" />
+                        <input type="text" id="text"
+                            class="w-full p-3 rounded-2xl text-amber-50 md:text-lg outline-none" placeholder="Search" />
 
                     </div>
                 </section>
@@ -50,7 +49,7 @@
         <!-- Used to display folders -->
         <section>
             <div id="go-back-div"
-                class="relative top-2.5 left-3 hidden items-center gap-1 bg-black rounded-xl w-[10%] px-4 py-2 mx-9">
+                class="relative top-2.5 left-3 w-[40%] hidden items-center gap-1 bg-black rounded-xl lg:w-[10%] px-4 py-2 lg:mx-9">
                 <img id="go-back-btn" src="src/images/left-arrow.png" class="invert hover:cursor-pointer"
                     alt="prev-btn">
                 <span class="text-white bg-black px-3">Go Back</span>
@@ -61,77 +60,20 @@
         </section>
         <!-- Used to display folders container end-->
         <!-- Used to display the songs from folder -->
-
         <section id="display-songs-container"
-            class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden grid-cols-1 place-items-center gap-3 md:grid-cols-3 lg:grid-cols-5">
-
-            <!-- <div class="border bg-gray-900 px-3 py-2 w-full flex justify-around items-center gap-3 rounded-xl">
-                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
-                    <img src="src/images/music-player.png" alt="music-iocn">
-                </div>
-                <div>
-                    <p class="text-white text-sm p-1 md:text-md">Boku no Hero Academia - Merry-Go-Round</p>
-                </div>
-                <div class="w-[30px] invert">
-                    <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
-                </div>
-            </div>
-            <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
-                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
-                    <img src="src/images/music-player.png" alt="music-iocn">
-                </div>
-                <div>
-                    <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                </div>
-                <div class="w-[30px] invert">
-                    <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
-                </div>
-            </div>
-            <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
-                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
-                    <img src="src/images/music-player.png" alt="music-iocn">
-                </div>
-                <div>
-                    <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                </div>
-                <div class="w-[30px] invert">
-                    <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
-                </div>
-            </div>
-            <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
-                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
-                    <img src="src/images/music-player.png" alt="music-iocn">
-                </div>
-                <div>
-                    <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                </div>
-                <div class="w-[30px] invert">
-                    <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
-                </div>
-            </div>
-            <div class="border bg-gray-900 px-3 py-3 w-full flex justify-around items-center gap-3 rounded-xl">
-                <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px] flex justify-center items-center">
-                    <img src="src/images/music-player.png" alt="music-iocn">
-                </div>
-                <div>
-                    <p class="text-white text-sm p-1">Boku no Hero Academia - Merry-Go-Round</p>
-                </div>
-                <div class="w-[30px] invert">
-                    <img src="src/images/unlike-heart-icon.png" alt="unliked-heart-icon">
-                </div>
-            </div> -->
+            class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden  place-items-center gap-3 grid-cols-1  md:grid-cols-3 lg:grid-cols-5">
         </section>
         <!-- Used to display the songs from folder container end-->
         <!-- Song, play, pause section -->
         <article id="music-player"
-            class="bg-[#1B3C53] w-[90%] mx-auto my-2 p-3 rounded-3xl flex justify-between items-center gap-1.5">
-            <div class="aspect-square w-[55px] md:w-[70px] lg:w-[90px]">
+            class="bg-[#1B3C53] w-[90%] mx-auto my-2 p-3 rounded-3xl flex justify-around items-center gap-1.5 lg:flex lg:justify-center lg:items-center lg:flex-row">
+            <div class="aspect-square w-[75px] md:w-[70px] lg:w-[90px] hidden md:block mg:block">
                 <img src="src/images/active-song-icon.png" alt="active-music-icon">
             </div>
             <!-- Progress bar and music details holder -->
-            <div class="w-full p-1">
+            <div class="w-full ">
                 <!-- play, pause, next button div holder -->
-                <div class="flex items-center gap-2 justify-center p-2">
+                <div class="flex items-center gap-2 justify-center p-2 my-2">
                     <!-- Prev btn -->
                     <div id="prev-btn" class="aspect-square w-[20px] md:w-[40px] lg:w-[50px]">
                         <img src="src/images/prev-btn.png" alt="prev-btn-icon">
@@ -153,7 +95,7 @@
                 <!-- Progress bar outer div -->
                 <div class="bg-black w-full rounded-2xl p-1 cursor-pointer" id="progress-outer-bar">
                     <!-- Progress bar inner div -->
-                    <div class="bg-white w-[40%] p-1 rounded-2xl cursor-pointer" id="progress-inner-bar">
+                    <div class="bg-cyan-300 w-[40%] p-1 rounded-2xl cursor-pointer" id="progress-inner-bar">
 
                     </div>
                     <!-- Progress bar inner div end -->
@@ -161,21 +103,26 @@
                 <!-- Progress bar outer div end -->
                 <!-- Progress bar div end -->
                 <!-- song details and controls div holder -->
-                <div class="flex justify-between items-center mt-2">
+                <div
+                    class="flex justify-center items-center flex-col gap-1 mt-2 mg:flex md:justify-between md:items-center md:flex-row lg:flex lg:justify-between lg:items-center lg:flex-row">
                     <!-- Music name -->
                     <div>
-                        <span id="curr-song-name" class="text-[12px] md:text-lg lg:text-xl text-white">--</span>
+                        <p id="curr-song-name" class="text-[15px] md:text-lg lg:text-xl font-mono text-white">--</p>
                     </div>
                     <!-- Music name end -->
 
                     <!-- song duration timer div -->
-                    <div>
-                        <span id="song-duration" class="text-white text-sm md:text-lg lg:text-xl">0:00/0:00</span>
+                    <div class="text-right">
+                        <p id="song-duration" class="text-white font-mono text-sm text-center  md:text-lg lg:text-xl inline">
+                            0:00/0:00</p>
                     </div>
-                    <!-- <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1"
-                        class="w-full cursor-pointer" /> -->
                     <!-- song duration timer div end -->
                 </div>
+            </div>
+            <div
+                class="hidden md:rotate-270 md:flex md:justify-center md:items-center lg:rotate-270 lg:flex lg:justify-center lg:items-center ">
+                <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1"
+                    class="w-full cursor-pointer accent-cyan-300" />
             </div>
             <!-- Progress bar and music details holder end-->
         </article>
@@ -185,11 +132,11 @@
         <!-- section one -->
         <section class="flex flex-col md:flex-row md:w-full">
             <div class="bg-[#101E26] md:w-[40%] md:flex md:justify-center md:items-center">
-                <h4 class="text-[#ECDFCC] text-7xl p-10 md: md:leading-[100px]">Taste of<br>Music</h4>
+                <h4 class="text-[#ECDFCC] font-mono text-7xl p-10 md:leading-[100px]">Taste of<br>Music</h4>
             </div>
             <!-- section two -->
             <section class="bg-[#103766] p-4 md:w-[60%]">
-                <p class="bg-[#101E26] text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
+                <p class="bg-[#101E26] font-mono text-[#ECDFCC] mx-auto my-5 p-3 rounded-2xl text-4xl text-center w-[90%]">All
                     time favorite</p>
                 <!-- displaying most fav/played songs -->
                 <div id="fav-Song-Container"
@@ -200,7 +147,7 @@
         </section>
     </main>
     <footer class="bg-[#001F3F] p-5">
-        <p class="text-[#ECDFCC] text-center text-xl">MyMusic &copy; 2025</p>
+        <p class="text-[#ECDFCC] font-mono text-center text-xl">MyMusic &copy; 2025</p>
     </footer>
     <script src="script.js"></script>
 </body>
