--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./src/output.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=favorite" />
-
+    <link rel="stylesheet" href="./src/app.css">
 <body>
     <!-- Circle Div -->
     <!-- <div id="circle-div" class="border-2 border-amber-700 absolute top-0 left-0 z-[-1]"> -->
@@ -26,7 +26,7 @@
                 </div>
                 <div class="p-5 my-5">
                     <span
-                        class="bg-[#101E26] font-mono text-[#ECDFCC] text-md px-6 py-8 rounded-2xl md:text-md md:font-semibold md:py-12 md:px-8 lg:text-2xl lg:px-5 lg:py-18">Your
+                        class="bg-[#101E26] font-mono text-[#ECDFCC] text-[12px] px-6 py-8 rounded-2xl md:text-md md:font-semibold md:py-12 md:px-8 lg:text-xl lg:px-5 lg:py-18">Your
                         Music place, play it your
                         way</span>
                 </div>
@@ -55,13 +55,13 @@
                 <span class="text-white bg-black px-3">Go Back</span>
             </div>
             <article id="display-folders"
-                class="w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-3 place-items-center gap-3 md:grid-cols-5 lg:grid-cols-6">
+                class=".hide-scrollbar w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-0 p-3 grid grid-cols-2 place-items-center gap-3 md:grid-cols-5 lg:grid-cols-6">
             </article>
         </section>
         <!-- Used to display folders container end-->
         <!-- Used to display the songs from folder -->
         <section id="display-songs-container"
-            class="relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden  place-items-center gap-3 grid-cols-1  md:grid-cols-3 lg:grid-cols-5">
+            class="hide-scrollbar relative w-[95%] min-h-[100px] max-h-[270px] md:max-h-[250px] lg:max-h-[300px] overflow-y-auto mx-auto my-2 px-3 pt-10 hidden  place-items-center gap-3 grid-cols-1  md:grid-cols-3 lg:grid-cols-5">
         </section>
         <!-- Used to display the songs from folder container end-->
         <!-- Song, play, pause section -->
@@ -107,7 +107,7 @@
                     class="flex justify-center items-center flex-col gap-1 mt-2 mg:flex md:justify-between md:items-center md:flex-row lg:flex lg:justify-between lg:items-center lg:flex-row">
                     <!-- Music name -->
                     <div>
-                        <p id="curr-song-name" class="text-[15px] md:text-lg lg:text-xl font-mono text-white">--</p>
+                        <p id="curr-song-name" class="text-[12px] md:text-lg lg:text-xl font-mono text-white">--</p>
                     </div>
                     <!-- Music name end -->
 
@@ -140,7 +140,7 @@
                     time favorite</p>
                 <!-- displaying most fav/played songs -->
                 <div id="fav-Song-Container"
-                    class="grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
+                    class="hide-scrollbar grid grid-rows-1 gap-2 px-4 py-3 overflow-y-scroll min-h-[100px] max-h-[300px] md:max-h-[300px] lg:max-h-[600px] lg:py-7 lg:px-6">
                 </div>
                 <!-- displaying most fav/played songs container end-->
             </section>
